# ActivityMentor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  storage.json
ActivityMentor/: APIclient.py  __init__.py  app.py  auth.py  initializeDB.py  main.py  models.py
ActivityMentor/templates/: index.html
ActivityMentor/uploads/: sample.xlsx
flagged/: log.csv
src/: APIclient.py  DBmanager.py  GUI.py  __init__.py  app.py  auth.py  initializeDB.py  login.py  main.py  models.py  storage.py
src/static/: components_Index.css
src/templates/: AiAPI.html  index.html  login.html  register.html  signup.html
src/templates/testHTML/: backupIndex.html
test/: gradioApp.py  sampleData.txt
tests/: test.py
