
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ActivityMentor"
version = "1.0.0"
description = "ActivityMentor is a Flask-based web application allows users to register, log in, record their daily activities, and interact with a Copilot AI using the OpenAI API. "
readme = "README.md"
authors = [{ name = "Alessandro Mendicino"}]
license = { file = "LICENSE" }
dependencies = [
    "aiohttp             ==3.9.1",
    "aiosignal           ==1.3.1",
    "annotated-types     ==0.6.0",
    "anyio               ==4.2.0",
    "attrs               ==23.2.0",
    "blinker             ==1.7.0",
    "certifi             ==2023.11.17",
    "charset-normalizer  ==3.3.2",
    "click               ==8.1.7",
    "colorama            ==0.4.6",
    "dataclasses-json    ==0.6.3",
    "distro              ==1.9.0",
    "Flask               ==3.0.1",
    "Flask-Login         ==0.6.3",
    "Flask-SQLAlchemy    ==3.1.1",
    "frozenlist          ==1.4.1",
    "greenlet            ==3.0.3",
    "h11                 ==0.14.0",
    "httpcore            ==1.0.2",
    "httpx               ==0.26.0",
    "idna                ==3.6",
    "itsdangerous        ==2.1.2",
    "Jinja2              ==3.1.3",
    "jproperties         ==2.1.1",
    "jsonpatch           ==1.33",
    "jsonpointer         ==2.4",
    "langchain           ==0.1.3",
    "langchain-community ==0.0.15",
    "langchain-core      ==0.1.15",
    "langsmith           ==0.0.83",
    "MarkupSafe          ==2.1.4",
    "marshmallow         ==3.20.2",
    "multidict           ==6.0.4",
    "mypy-extensions     ==1.0.0",
    "numpy               ==1.26.3",
    "openai              ==1.9.0",
    "packaging           ==23.2",
    "pip                 ==23.2.1",
    "pydantic            ==2.5.3",
    "pydantic_core       ==2.14.6",
    "PyYAML              ==6.0.1",
    "requests            ==2.31.0",
    "six                 ==1.16.0",
    "sniffio             ==1.3.0",
    "SQLAlchemy          ==2.0.25",
    "tenacity            ==8.2.3",
    "tqdm                ==4.66.1",
    "typing_extensions   ==4.9.0",
    "typing-inspect      ==0.9.0",
    "urllib3             ==2.1.0",
    "Werkzeug            ==3.0.1",
    "yarl                ==1.9.4",
]

[project.urls]
Homepage = "https://github.com/AlessandroMendicino/XML_PodParser.git "  